istiofiles/virtual-service-promotion-v1-v2-v3.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - match:
    - headers:
        user-preference:
          prefix: "123"
    route:
    - destination:
        host: recommendation
        subset: version-v3
  - match:
    - headers:
        user-preference:
          prefix: "12"
    route:
    - destination:
        host: recommendation
        subset: version-v2
  - route:
    - destination:
        host: recommendation
        subset: version-v1
---
